[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/ScoreboardUI/ScoreboardColumn.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/ScoreboardUI/Scoreboard.gd" type="Script" id=2]

[node name="Scoreboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Module1Scores" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 637.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
column_name = "Stage 1"

[node name="Module2Scores" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
column_name = "Stage 2"

[node name="Module3Scores" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
column_name = "Stage 3"
